--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,9 +1,15 @@
 body {
-  font-family: 'Crimson Text', sans-serif;
-  font-size: 22px;
+    font-family: 'Crimson Text', sans-serif;
+    font-size: 22px;
 }
 
-
+.section{
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+.hero-body{
+    padding-bottom: 1rem;
+}
 .footer .icon-link {
     font-size: 25px;
     color: #000;
@@ -15,17 +21,17 @@ body {
 }
 
 .dnerf {
-  font-variant: small-caps;
+    font-variant: small-caps;
 }
 
 
 .teaser .hero-body {
-  padding-top: 0;
-  padding-bottom: 3rem;
+    padding-top: 0;
+    padding-bottom: 3rem;
 }
 
 .teaser {
-  font-family: 'Crimson Text', sans-serif;
+    font-family: 'Crimson Text', sans-serif;
 }
 
 
@@ -33,16 +39,16 @@ body {
 }
 
 .publication-banner {
-  max-height: parent;
+    max-height: parent;
 
 }
 
 .publication-banner video {
-  position: relative;
-  left: auto;
-  top: auto;
-  transform: none;
-  object-fit: fit;
+    position: relative;
+    left: auto;
+    top: auto;
+    transform: none;
+    object-fit: fit;
 }
 
 .publication-header .hero-body {
@@ -72,7 +78,7 @@ body {
 }
 
 .publication-authors a {
-   color: hsl(204, 86%, 53%) !important;
+    color: hsl(204, 86%, 53%) !important;
 }
 
 .publication-authors a:hover {
@@ -80,14 +86,14 @@ body {
 }
 
 .author-block {
-  display: inline-block;
+    display: inline-block;
 }
 
 .publication-banner img {
 }
 
 .publication-authors {
-  /*color: #4286f4;*/
+    /*color: #4286f4;*/
 }
 
 .publication-video {
@@ -112,136 +118,136 @@ body {
 }
 
 .results-carousel {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .results-carousel .item {
-  margin: 5px;
-  overflow: hidden;
-  border: 1px solid #bbb;
-  border-radius: 10px;
-  padding: 0;
-  font-size: 0;
+    margin: 5px;
+    overflow: hidden;
+    border: 1px solid #bbb;
+    border-radius: 10px;
+    padding: 0;
+    font-size: 0;
 }
 
 .results-carousel video {
-  margin: 0;
+    margin: 0;
 }
 
 .interpolation-panel {
-  background: #f5f5f5;
-  border-radius: 10px;
+    background: #f5f5f5;
+    border-radius: 10px;
 }
 
 .interpolation-panel .interpolation-image {
-  width: 100%;
-  border-radius: 5px;
+    width: 100%;
+    border-radius: 5px;
 }
 
 .interpolation-video-column {
 }
 
 .interpolation-panel .slider {
-  margin: 0 !important;
+    margin: 0 !important;
 }
 
 .interpolation-panel .slider {
-  margin: 0 !important;
+    margin: 0 !important;
 }
 
 #interpolation-image-wrapper {
-  width: 100%;
+    width: 100%;
 }
 #interpolation-image-wrapper img {
-  border-radius: 5px;
+    border-radius: 5px;
 }
 
 .chair-svg {
-  display: inline-block;
-  width: 1em; /* Adjust as needed */
-  height: 1em; /* Adjust as needed */
-  background-image: url('../images/chair-solid.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+    display: inline-block;
+    width: 1em; /* Adjust as needed */
+    height: 1em; /* Adjust as needed */
+    background-image: url('../images/chair-solid.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .bed-svg {
-  display: inline-block;
-  width: 1.2em; /* Adjust as needed */
-  height: 1.2em; /* Adjust as needed */
-  background-image: url('../images/bed.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+    display: inline-block;
+    width: 1.2em; /* Adjust as needed */
+    height: 1.2em; /* Adjust as needed */
+    background-image: url('../images/bed.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .sofa-svg {
-  display: inline-block;
-  width: 1em; /* Adjust as needed */
-  height: 1em; /* Adjust as needed */
-  background-image: url('../images/couch-solid.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  margin-right: 0.2em;
+    display: inline-block;
+    width: 1em; /* Adjust as needed */
+    height: 1em; /* Adjust as needed */
+    background-image: url('../images/couch-solid.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 0.2em;
 }
 
 .bath-svg {
-  display: inline-block;
-  width: 1em; /* Adjust as needed */
-  height: 1em; /* Adjust as needed */
-  background-image: url('../images/bath-solid.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+    display: inline-block;
+    width: 1em; /* Adjust as needed */
+    height: 1em; /* Adjust as needed */
+    background-image: url('../images/bath-solid.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .house-svg {
-  display: inline-block;
-  vertical-align: middle;
-  width: 1.8em; /* Adjust size as needed */
-  height: 1.8em; /* Adjust size as needed */
-  background-image: url('../images/HoloDeckLogo.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  /* margin-right: 0.5em; Adjust spacing as needed */
+    display: inline-block;
+    vertical-align: middle;
+    width: 1.8em; /* Adjust size as needed */
+    height: 1.8em; /* Adjust size as needed */
+    background-image: url('../images/HoloDeckLogo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* margin-right: 0.5em; Adjust spacing as needed */
 }
 
 .small-caps {
-  font-variant: small-caps;
-  /* Additional styling as needed */
+    font-variant: small-caps;
+    /* Additional styling as needed */
 }
 
 
 .logo {
-  height: 80px; /* adjust as needed */
-  width: auto;
+    height: 80px; /* adjust as needed */
+    width: auto;
 }
 
 .media-display {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .media-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
 .item-1 .image-caption-container .caption {
-  text-align: center;
-  display: block;
-  margin: auto;
-  white-space: normal;
-  height: auto;
-  overflow: hidden;
+    text-align: center;
+    display: block;
+    margin: auto;
+    white-space: normal;
+    height: auto;
+    overflow: hidden;
 }
 
 .item-1 .image-caption-container .caption:nth-child(2) {
-  height: 4em; /* Adjust as needed to fit two lines */
-  line-height: 2em; /* Adjust as needed for vertical centering */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center !important;
+    height: 4em; /* Adjust as needed to fit two lines */
+    line-height: 2em; /* Adjust as needed for vertical centering */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center !important;
 }
